<resources>
    <string name="app_name">Recordatorios</string>

    <string name="action_select_date">Fecha</string>
    <string name="action_select_time">Hora</string>
    <string name="action_priority_high">Alta</string>
    <string name="action_priority_medium">Media</string>
    <string name="action_priority_low">Baja</string>
    <string name="action_save">Guardar</string>
    <string name="action_ok">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_add_repetition">Añadir una repetición</string>

    <string name="error_reminder_description">Introduce una descripción</string>
    <string name="error_reminder_date">Introduce fecha</string>
    <string name="error_reminder_hour">Introduce hora</string>

    <string name="title_bottom_sheet_repetition">Añadir una repetición</string>
    <string name="title_config_repetition">Repetición</string>
    <string name="title_config_sound">Sonido</string>
    <string name="title_config_vibration">Vibración</string>
    <string name="hint_reminder_desc">Descripción</string>
    <string name="error_missing_priority">Selecciona una prioridad</string>
    <string name="action_intent">Reintentar</string>
    <string name="title_bottom_sheet_sound">Añadir un tono</string>
    <string name="action_add_vibration">Vibrar cuando suene el recordatorio</string>
    <string name="action_view_reminders">Mis recordatorios</string>
    <string name="view_birthday">Cumpleaños</string>
    <string name="view_reminders_completed">Hecho</string>
    <string name="view_calendar">Calendario</string>
    <string name="send_reminder">Enviar un recordatorio</string>
    <string name="view_settings">Ajustes</string>


</resources>
