<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_navigation_drawer_reminder"
            android:checked="true"
            android:icon="@drawable/ic_view_list"
            android:title="@string/action_view_reminders" />
        <item
            android:id="@+id/item_navigation_drawer_birthday"
            android:icon="@drawable/ic_birthday"
            android:title="@string/view_birthday" />
        <item
            android:id="@+id/item_navigation_drawer_check"
            android:icon="@drawable/ic_check"
            android:title="@string/view_reminders_completed" />
        <item
            android:id="@+id/item_navigation_drawer_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/view_calendar" />
    </group>

    <group
        android:id="@+id/menu2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/item_navigation_drawer_send"
            android:icon="@drawable/ic_send"
            android:title="@string/send_reminder"/>
            <item
                android:id="@+id/item_navigation_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/view_settings"/>
    </group>
</menu>